--- a/pages/RECIPES/style.css
+++ b/pages/RECIPES/style.css
@@ -68,13 +68,20 @@ i{
 
 footer{
     margin-top: 30%;
-    background-color: red;
+    background-color: #8F1D1D;
     padding: 10%;
     text-align: center;
     color: #fff;
     display: flex;
     font-weight: bolder ;
     flex-direction: column;
+}
+.logo-footer{
+    width: 100%;
+}
+.logo{
+    width: 70%;
+    margin-bottom: 10%;
 }
 
 @media (min-width: 1020px){
@@ -114,5 +121,21 @@ footer{
     .ingredients ul, .steps ul{
         font-size: 1.5em;
     }
+    footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+    .logo{
+        width: 40%;
+    }
+    footer p{
+        font-size: 2em;
+    }
 
+    .logo-footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 }
