--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+.on-click-button{
+   filter: brightness(0.9);
+}
 
 main{
     font-family: 'Source Serif Pro';
     padding: 0% 4%;
 }
+
 a{
     text-decoration: none;
 }
@@ -20,6 +24,7 @@ a{
 .hero-container{
     width: 100%;
 }
+
 
 .hero-image{
     width: 100%;
@@ -58,17 +63,53 @@ a{
     left: 73%;
     transform: translate(-50%,-50%);
 }
-.quote{
+/* .quote{
     font-weight: 500;
     text-align: center;
     font-style: italic;
     font-size: 2em;
    /* background-color: rgb(240, 225, 205); */
-   background-color: rgb(211, 233, 151);
+   /* background-color: rgb(211, 233, 151);
 
    padding: 5%;
    width: 100%;
-}
+ } */
+
+ .restaurant__quote__container{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    border-radius: 5px;
+    background: url("https://images.unsplash.com/photo-1522336572468-97b06e8ef143?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80")
+    center center/ cover no-repeat;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .restaurant__quote__image{
+    width: 100%;
+    position: absolute;
+    /* background-color: #440d0d; */
+    background-color: #631818;
+    /* background-color: #0a4065; */
+    opacity: 40%;
+    height: 100%;
+    border-radius: 13px;
+  }
+  
+  
+  .restaurant__quote__text{
+    position: absolute;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+   
+  }
+
 
 .recipe-section{
     width: 100%;
@@ -138,6 +179,7 @@ footer{
     background-color: red;
     width: 100%;
 }
+
 .copyright{
     width: 100%;
     text-align: center;
@@ -176,14 +218,22 @@ footer{
 
    
     }
-    .quote{
+    /* .quote{
         margin: auto;
         font-size: 3em;
         background-color: unset;
         color: white;
         font-weight: bold;
         z-index: 1000;
-    }
+    } */
+    .restaurant__quote__container{
+        width: 100%;
+        height: 400px;
+    
+      }
+      .restaurant__quote__text{
+        font-size: 2em;
+      }
 
     .heading{
         font-size: 4em;
